--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>SITESITESITE</h1>
+    <h1>SITESITESITEe</h1>
 </body>
 </html>
