--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>SITESITESITEe</h1>
+    <h1>drxlouis portfolio</h1>
+
+
+ <script src="index.js"></script>
 </body>
 </html>
